crates/compiler/tests/parse_errors/exposing_variants.elm
module Main exposing (Foo(bar))
x = 1
